# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  setup.config  third-project-db.dump
page_analyzer/: __init__.py  app.py  external_request.py  get_data_from_url.py  url_parser.py  url_validator.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
tests/: conftest.py  test_add_url.py  test_check_url.py  test_get_data_from_url.py  test_index.py  test_make_external_req.py  test_make_request.py  test_post_from_form.py  test_url.py  test_url_parser.py  test_url_validator.py  test_urls.py  test_validator.py
tests/fixtures/: test_html_data.py
